--- a/client/src/components/cards/card-signup/card-signup.styles.scss
+++ b/client/src/components/cards/card-signup/card-signup.styles.scss
@@ -1,19 +1,20 @@
 @use 'components/cards/card-styles.scss';
+@use 'styles/common';
+@use 'styles/variables' as vars;
 
 .card-signup {
   @extend %card-secondary;
 
   form {
+    @extend %columnflex;
+    @extend %spacearoundcontent;
     margin: auto 15%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
     height: 95%;
 
     .error {
-      width: 100%;
-      text-align: center;
-      color: red;
+      @extend %centtext;
+      @extend %fullwidth;
+      color: vars.$exclamationcolor;
       font-style: italic;
     }
   }
