--- a/client/src/components/cards/cards-playlist/card-playlist.styles.scss
+++ b/client/src/components/cards/cards-playlist/card-playlist.styles.scss
@@ -1,18 +1,20 @@
 @use 'components/cards/card-styles.scss';
+@use 'styles/common';
 @use 'styles/mixins' as mixins;
 @use 'styles/variables' as vars;
 
 .card-playlist {
   @extend %card-secondary-base;
-  @include mixins.flexeddiv(unset, center);
-  align-items: center;
+  @extend %centeritems;
+  @extend %rowflex;
+  @extend %centercontent;
   margin: 28px 5px 0 2.5px;
 
   .card-big-table {
     @include mixins.setwidthandheight(90%, 90%);
     @include mixins.setborderwithradius(unset, 3%);
     overflow-y: auto;
-    color: white;
+    color: vars.$blankcolor;
   }
 
   &.radio {
