--- a/client/src/components/lang-selector/lang-selector.styles.scss
+++ b/client/src/components/lang-selector/lang-selector.styles.scss
@@ -1,5 +1,7 @@
+@use 'styles/common';
+
 .lang-container {
-  display: flex;
+  @extend %rowflex;
 
   .lang {
     margin: 0 10px;
@@ -7,9 +9,9 @@
     width: 50px;
 
     img {
-      cursor: pointer;
-      width: 100%;
-      height: 100%;
+      @extend %pointer;
+      @extend %fullwidth;
+      @extend %fullheight;
     }
   }
 }
