--- a/client/src/components/shared/notification/notification.styles.scss
+++ b/client/src/components/shared/notification/notification.styles.scss
@@ -1,16 +1,16 @@
+@use 'styles/common';
 @use 'styles/variables' as vars;
 
 .notification-container {
+  @extend %columnflex;
   margin: 20px;
-  color: white;
+  color: vars.$blankcolor;
   opacity: 1;
   transition: opacity 0.6s;
   position: absolute;
   right: 10px;
   bottom: 10px;
   width: 20vw;
-  display: flex;
-  flex-direction: column;
 
   .notification {
     margin: 5px 0;
@@ -30,19 +30,19 @@
     }
 
     .notification-content {
-      display: flex;
-      justify-content: space-between;
+      @extend %rowflex;
+      @extend %spacebetweencontent;
       cursor: default;
 
       .notification-close {
-        cursor: pointer;
+        @extend %pointer;
         font-size: 22px;
         line-height: 15px;
         font-weight: bold;
         transition: 0.3s;
 
         &:hover {
-          color: black;
+          color: vars.$filledcolor;
         }
       }
     }
