--- a/client/src/components/shared/small-button/small-button.styles.scss
+++ b/client/src/components/shared/small-button/small-button.styles.scss
@@ -1,16 +1,16 @@
+@use 'styles/common';
 @use 'styles/mixins' as mixins;
 
 .small-btn {
   @include mixins.setwidthandheight(50px, 50px);
   @include mixins.setborderwithradius(0px solid black, 12px);
   @include mixins.animation(all, 0.5s);
+  @extend %pointer;
+  @extend %centeredbackgroundwithnorepeat;
   position: absolute;
   margin-top: 10px;
   right: 10px;
-  cursor: pointer;
   background-size: 70% 80%;
-  background-position: center;
-  background-repeat: no-repeat;
   background-image: url('http://localhost:3000/images/gear.svg');
   z-index: 999;
 
